v2: sorting changes (5 columns), type of loan added.

--- a/src/main/java/com/marcusoliver/loan/tracker/AddALoan.form
+++ b/src/main/java/com/marcusoliver/loan/tracker/AddALoan.form
@@ -135,11 +135,8 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="24" style="0"/>
         </Property>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="2">
-            <StringItem index="0" value="Car Loan"/>
-            <StringItem index="1" value="House Loan"/>
-          </StringArray>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;Car Loan&quot;, &quot;House Loan&quot;, &quot;Education Loan&quot;, &quot;Business Loan&quot; })" type="code"/>
         </Property>
       </Properties>
       <Events>
